# src/api/static/openapi.json
@@ -48,7 +48,7 @@
             "type": "string"
           },
           "created_at": {
-            "default": "2023-07-14T14:02:57.606031",
+            "default": "2023-07-14T14:37:01.204821",
             "format": "date-time",
             "title": "Created At",
             "type": "string"
@@ -76,7 +76,7 @@
             "type": "array"
           },
           "updated_at": {
-            "default": "2023-07-14T14:02:57.606031",
+            "default": "2023-07-14T14:37:01.204821",
             "format": "date-time",
             "title": "Updated At",
             "type": "string"
@@ -118,8 +118,8 @@
     }
   },
   "info": {
-    "description": "Teste",
-    "title": "Teste",
+    "description": "Transaction API",
+    "title": "Transaction API",
     "version": "1.0.0"
   },
   "openapi": "3.0.2",
@@ -186,11 +186,33 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/TransactionSchema"
+                  "properties": {
+                    "message": {
+                      "example": "Transaction deleted successfully",
+                      "type": "string"
+                    }
+                  },
+                  "type": "object"
                 }
               }
             },
             "description": "success message"
+          },
+          "404": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "properties": {
+                    "error": {
+                      "example": "Transaction not found",
+                      "type": "string"
+                    }
+                  },
+                  "type": "object"
+                }
+              }
+            },
+            "description": "Transaction not found"
           }
         },
         "summary": "Removes a transaction"
@@ -217,6 +239,22 @@
               }
             },
             "description": "a transaction"
+          },
+          "404": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "properties": {
+                    "error": {
+                      "example": "Transaction not found",
+                      "type": "string"
+                    }
+                  },
+                  "type": "object"
+                }
+              }
+            },
+            "description": "Transaction not found"
           }
         },
         "summary": "Returns a transaction"
